--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "basicui": "file:basicui-1.0.3.tgz",
     "next": "14.1.4",
     "react": "^18",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
     "rxjs": "^7.8.1"
   },
