--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "rules": { "react/no-unescaped-entities": 0 }
 }
